Styling reader link to make it more readable. Centering issue cover and adding a border.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -159,6 +159,20 @@ th, td {
     border: 2px solid black;
 }
 
+.issueCover {
+    margin-top: 25px;
+    margin-bottom: 25px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: 5px solid white;
+}
+
+.readerLink {
+    color: red;
+    font-weight: bold;
+}
+
 .coverButton {
     color: #f5f5f5;
     width: 100px;
